fix: notion-page icon dark mode fill color

--- a/client/styles/react-notion-x.css
+++ b/client/styles/react-notion-x.css
@@ -540,6 +540,7 @@ svg.notion-page-icon {
   display: flex;
   justify-content: center;
   align-items: center;
+  fill: var(--fg-color);
   width: 22px;
   height: 22px;
   max-width: 22px;
